# omni-unity

./: .gitignore  CODE_REVIEW.md  README.md
.github/workflows/: ci.yml
Package_project/: pyproject.toml
Package_project/project_omni/: __init__.py  __main__.py  agent.py  config.py  log.py  ui.py
Package_project/tests/: test_Package.py
Python/Package_project/: dev-requirements.txt  pyproject.toml
Python/Package_project/project_omni/: agent.py  config.py  ui.py
Python/Package_project/tests/: test_Package.py
