[project]
name = "project-omni"
version = "1.0.0"
description = "Unity Editor automation agent, built on the Claude Agent SDK"
authors = [{name = "Parsa", email = "141932922+parsakalantari85@users.noreply.github.com"}]
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "rich",
    "prompt_toolkit",
]
dynamic = ["optional-dependencies"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["project_omni"]

[tool.setuptools.dynamic]
optional-dependencies = {dev = {file = ["dev-requirements.txt"]}} # add packages for development in the dev-requirements.txt file

[project.scripts]
omni = "project_omni.agent:run"
